Fix asynchronous lecture slide sync handling